<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Primera_pantalla">

    <TextView
        android:text="@string/titulo"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="#ffb293"
        android:id="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:src="@drawable/logopizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb1"
        android:id="@+id/checkBox"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/rg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb2"
        android:id="@+id/checkBox2"
        android:layout_above="@+id/editText"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb3"
        android:id="@+id/checkBox3"
        android:layout_above="@+id/editText"
        android:layout_toRightOf="@+id/checkBox2"
        android:layout_toEndOf="@+id/checkBox2" />

    <EditText
        android:id="@+id/editText"
        android:hint="@string/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button"
        android:text="@string/button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/textView2"
        android:id="@+id/textView2"
        android:background="#89f1ff"
        android:layout_above="@+id/button2"
        android:layout_alignRight="@+id/checkBox3"
        android:layout_alignEnd="@+id/checkBox3" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingTop="0dp"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:layout_marginTop="36dp">

        <RadioButton
            android:id="@+id/radioButton1"
            android:text="@string/radioButton1"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/editText"
            android:layout_toEndOf="@+id/editText" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:text="@string/radioButton2"

            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/radioButton1"
            android:layout_alignRight="@+id/checkBox"
            android:layout_alignEnd="@+id/checkBox" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg2"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb3"
            android:id="@+id/radioButton3"
            android:layout_above="@+id/radioButton"
            android:layout_alignLeft="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb4"
            android:id="@+id/radioButton4"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb5"
            android:id="@+id/radioButton5" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedirFactura"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

</RelativeLayout>
